syntax = "proto3";

option go_package = "/ygo";
package ygo.common;

message ResourceID {
  string ID = 1;
}

message ResourceIDs {
  repeated string IDs = 1;
}

message ResourceName{
  string value = 1;
}

message ResourceNames {
  repeated string names = 1;
}

message SearchTerm {
  string ID = 1;
  string name = 2;
}

message Archetype {
	string archetype = 1;
}

message BlackListed {
  repeated string black_listed_refs = 1;
}

message EffectiveTimeline {
  repeated string allDates = 1;
  repeated string futureDates = 2;
  string activeDate = 3;
}

enum CardRestrictionSortOrder {
  CARD_NAME = 0;
  SCORE_THEN_COLOR = 1;
}